# netfixgpt

./: .gitignore  Dockerfile  README.md  basic.ipynb  experiment.ipynb  mongo-embedding-store.ipynb  replicate_files.ipynb  requirements.txt
advanced-rag-pipeline/: pipeline.ipynb  utils.py
src/: README.md  advanced_pipeline.ipynb  basic.ipynb  basic_pipeline.ipynb  pyproject.toml  replicate_files.ipynb
src/butil/: scrape.py
src/evaluation/: README.md  eval.ipynb  eval_questions.txt
src/hutil/: scraper.py
src/hutil/tmp/: 7500.json  80 for Brady.json  A Bit of Light.json  A Chiara.json  A Christmas Story Christmas.json  A Haunting in Venice.json  Abigail.json  Acidman.json  Afterlife of the Party.json  Alice.json  Alien_ Romulus.json  All Day and a Night.json  Almighty Zeus.json  American Skin.json  Armageddon Time.json  Avatar_ The Way of Water.json  Awake.json  Back on the Strip.json  Backspot.json  Bad Boys_ Ride or Die.json  Beau Is Afraid.json  Beautiful Disaster.json  Beautiful Wedding.json  Beavis and Butt-Head Do the Universe.json  Benny Loves You.json  Billie Eilish_ The World's a Little Blurry.json  Biosphere.json  Birds of Prey.json  Black Adam.json  Black Box.json  Black Panther_ Wakanda Forever.json  Blink Twice.json  Blood and Money.json  Blood for Dust.json  Blue Bayou.json  Bob Marley_ One Love.json  Boogie.json  Brahms_ The Boy II.json  Breaking News in Yuba County.json  Breathe.json  (+297 more)
src/netfixgpt/: client.py
src/netfixgpt/api/: web.py
src/netfixgpt/data/: util.py
src/netfixgpt/providers/: rag.py
src/providers/: rag.py
(+2301 files in other folders)
