[tool.poetry]
name = "netfixgpt"
version = "0.1.0"
description = ""
authors = ["Abhi... <8083613+AbhimanyuAryan@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
httpx = "0.25.1"
pandas = "^2.1.3"
pydantic = "^2.5.1"
duckdb = "^0.9.2"
openai = "^1.3.3"
ipykernel = "^6.26.0"
click = "^8.1.7"
tqdm = "^4.66.1"
tiktoken = "^0.5.1"
llama-index = "^0.10.37"
fastapi = "^0.104.1"
uvicorn = "^0.28.0"
jinja2 = "^3.1.2"

[tool.poetry.scripts]
netfixgpt = "netfixgpt.client:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
